Adding the Resampling filter on the CPU.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,3 +93,11 @@ CUDA_ADD_EXECUTABLE(fftShift_3D_Real ${CPP_SOURCES} ${FFSHIFT_REAL_3D})
 # Real FFTShift 2D
 LIST(APPEND FFSHIFT_REAL_2D Src/fftShift_2D_Real.cpp)
 CUDA_ADD_EXECUTABLE(fftShift_2D_Real ${CPP_SOURCES} ${FFSHIFT_REAL_2D})
+
+# Resampling Filter
+LIST(APPEND FILTER_CPU Src/ResamplingFilter.cpp)
+CUDA_ADD_EXECUTABLE(filterCPU ${CPP_SOURCES} ${FILTER_CPU})
+
+# Resampling Filter
+LIST(APPEND FILTER_CUDA Src/ResamplingFilterCUDA.cu)
+CUDA_ADD_EXECUTABLE(filterCUDA ${CPP_SOURCES} ${FILTER_CUDA})
