Adding the memory transfer code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,8 @@ LIST(APPEND CPP_SOURCES
 
 # Kernels
 LIST(APPEND CUDA_TEST_KERNEL Src/TestCUDA.cu)
-    
-# Include directories 
+
+# Include directories
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Src)
 
 # Excutable, Example
@@ -76,11 +76,15 @@ LIST(APPEND CUDA_CUFFTSHIFT_3D_REAL_KERNEL Src/cufftShift_3D_Real.cu)
 CUDA_ADD_EXECUTABLE(cufftShift_3D_Real ${CPP_SOURCES} ${CUDA_CUFFTSHIFT_3D_REAL_KERNEL})
 CUDA_ADD_CUFFT_TO_TARGET(cufftShift_3D_Real)
 
+# Upload time to GPU
+LIST(APPEND UPLOAD_TIME Src/DataTransfer.cu)
+CUDA_ADD_EXECUTABLE(dataUploadToGPU ${CPP_SOURCES} ${UPLOAD_TIME})
+CUDA_ADD_CUFFT_TO_TARGET(dataUploadToGPU)
+
 # cufftShift Profiling Real 2D
 LIST(APPEND CUDA_CUFFTSHIFT_2D_REAL_KERNEL Src/cufftShift_2D_Real.cu)
 CUDA_ADD_EXECUTABLE(cufftShift_2D_Real ${CPP_SOURCES} ${CUDA_CUFFTSHIFT_2D_REAL_KERNEL})
 CUDA_ADD_CUFFT_TO_TARGET(cufftShift_2D_Real)
-
 
 # Complex FFTShift 3D
 LIST(APPEND FFSHIFT_COMPLEXS_3D Src/fftShift_3D_Complex.cpp)
